--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Helldivers 2 Stratagem Picker</title>
+  <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" onclick="sendToChooseLoudoutColours()">Choose Loudout Colours</button>
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center">
   <!-- <div id="root" class="w-full max-w-4xl p-4"></div> -->
