finished stratagem loudout selector screen

--- a/choose-loudout-colours.html
+++ b/choose-loudout-colours.html
@@ -50,7 +50,7 @@
         }
     </style>
 
-    <div class="big-square" id="sg1" style="left: 30%;">
+    <div class="big-square" id="sg1" style="left: 30%; background-color: white">
         <div class="small-squares">
             <div class="small-square" style="background-color: rgb(50,96,33); border: 1px solid black;"
                 onclick="updateBigSquareColour('sg1', 'green');" title="Defensive Stratagems"></div>
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <div class="big-square" id="sg2" style="left: 40%;">
+    <div class="big-square" id="sg2" style="left: 40%; background-color: white">
         <div class="small-squares">
             <div class="small-square" style="background-color: rgb(50,96,33); border: 1px solid black;"
                 onclick="updateBigSquareColour('sg2', 'green');" title="Defensive Stratagems"></div>
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <div class="big-square" id="sg3" style="left: 50%;">
+    <div class="big-square" id="sg3" style="left: 50%; background-color: white">
         <div class="small-squares">
             <div class="small-square" style="background-color: rgb(50,96,33); border: 1px solid black;"
                 onclick="updateBigSquareColour('sg3', 'green');" title="Defensive Stratagems"></div>
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <div class="big-square" id="sg4" style="left: 60%;">
+    <div class="big-square" id="sg4" style="left: 60%; background-color: white">
         <div class="small-squares">
             <div class="small-square" style="background-color: rgb(50,96,33); border: 1px solid black;"
                 onclick="updateBigSquareColour('sg4', 'green');" title="Defensive Stratagems"></div>
