added primary, secondary weapons and throwables to picking page, no images for throwables yet. WIP

--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
   <!-- style.css-->
   <link rel="stylesheet" href="style.css" />
   <div id="stratagemsContainer" class="stratagems-container">
+    <!-- <h1>Choose Stratagems</h1> -->
     <div id="blueStratagems" class="stratagem-type-container"></div>
     <div id="redStratagems" class="stratagem-type-container"></div>
     <div id="greenStratagems" class="stratagem-type-container"></div>
+  </div>
+  <div id="weaponsContainer" class="weapons-container">
+    <!-- <h1>Choose Weapons</h1> -->
+    <div id="weapons" class="weapons"></div>
+    <div id="secondaryWeapons" class="weapons"></div>
+    <div id="throwables" class="weapons"></div>
   </div>
 </body>
 </html>
